correcao de patch no html e css

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 
 html{
-    background-image: url('./assets/scenery.jpg');
+    background-image: url('../assets/scenery.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
